# OpenGL-SDL-Template

./: .clang-format  .cmake-format  .gitmodules  CMakeLists.txt  README.md
CMake/: BuildGLEW.cmake  BuildSDL.cmake
Include/: Config.h
Source/: Main.c
